Added authentication for duplicates when using matchmaking.

--- a/src/sass/_pickSection.scss
+++ b/src/sass/_pickSection.scss
@@ -21,7 +21,7 @@
 
     &__button {
       text-align: center;
-      background-color: $color-foreground-dark;
+      background-color: $color-foreground;
       border: none;
       font-size: 2rem;
       font-family: $font-special;
